# LogFlow

./: CMakeLists.txt  README.md  api.md  component.yml
examples/: general.c
include/: logger.h
src/: logger.c
test/: example.c  main.c
